--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,4 +1,4 @@
-<script async src="https://www.googletagmanager.com/gtag/js?id=YOUR_TAG"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5ET0R62Y9L"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
