--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,9 +1,9 @@
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-5ET0R62Y9L"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3PJD4NSJYE"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   <!-- end custom analytics snippet -->
-  gtag('config', G-5ET0R62Y9L');
+  gtag('config', G-3PJD4NSJYE');
 </script>
